# ml-implementations

./: .gitignore  README.md  pyproject.toml
dlpy/: .imdb_bin_rnn.py.swp  01-intro.py  imdb_bin_nn.py  imdb_bin_rnn.py  imdb_bin_transf.py
fan/: fan-nb.ipynb  fan_class.py  fan_models.py  fan_utils.py
fan/.ipynb_checkpoints/: fan-nb-checkpoint.ipynb
leNet-MR/: .README.md.swp  .lenet-mr.py.swp  lenet-mr.py  lenet5.pth
metrics/: metrics-fromdensys.py
ml-utils/: ml_utils.py
mtcnn/: detect_face.py  mtcnn-nb.ipynb  mtcnn.py
mtcnn/.ipynb_checkpoints/: mtcnn-nb-checkpoint.ipynb
pytorch-60-minutes-blitz/: cifar_net.pth  pytorch-example-classifier.py  pytorch-nn.py  pytorch-tensors.py
tf-regression/: regression.py
